[package]
name = "dll_injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["minwindef", "winnt", "libloaderapi", "processthreadsapi", "memoryapi", "errhandlingapi", "handleapi", "tlhelp32"] }
widestring = "0.4.3"