[package]
name = "dll_injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["minwindef", "winnt", "libloaderapi", "processthreadsapi", "memoryapi", "errhandlingapi", "handleapi", "tlhelp32", "winnt", "winbase"] }
widestring = "0.4.3"
windows = {version = "0.48.0", features = ["System", "Win32"]}
cxx = "1.0.102"
cxx-build = "1.0.102"

[build-dependencies]
cxx = "1.0.102"
cxx-build = "1.0.102"
